feat: разместить проект на gh-pages

--- a/src/blocks/element/__delete-button/element__delete-button.css
+++ b/src/blocks/element/__delete-button/element__delete-button.css
@@ -7,7 +7,7 @@
   padding: 0;
   display: flex;
   background: rgba(0, 0, 0, 0);
-  background-image: url(../../../images/__move.svg);
+  background-image: url(../../../images/move.svg);
   border: none;
   cursor: pointer;
 }
