--- a/src/blocks/like-button/like-button.css
+++ b/src/blocks/like-button/like-button.css
@@ -2,7 +2,7 @@
   grid-area: ♥;
   width: 22px;
   height: 19px;
-  background-image: url(../../images/__like_disabled.svg);
+  background-image: url(../../images/like_disabled.svg);
   background-repeat: no-repeat;
   border: none;
   background-color: #FFFFFF;
