--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -5,7 +5,7 @@
   border: 2px solid #FFFFFF;
   border-radius: 2px;
   align-self: center;
-  background-image: url(../../../images/__add-button.svg);
+  background-image: url(../../../images/add-button.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 22px;
