--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -23,7 +23,7 @@
   position: relative;
 }
 .profile__button {
-  background-image: url(../../../images/__edit-avatar.svg);
+  background-image: url(../../../images/edit-avatar.svg);
   background-repeat: no-repeat;
   background-position: 50%;
   position: absolute;
