--- a/src/blocks/like-button/_active/like-button_active.css
+++ b/src/blocks/like-button/_active/like-button_active.css
@@ -1,5 +1,5 @@
 .like-button_active {
-  background-image: url(../../../images/__like_active.svg);
+  background-image: url(../../../images/like_active.svg);
 }
 
 .like-button_active:hover {
