--- a/src/blocks/popup/__close-icon/popup__close-icon.css
+++ b/src/blocks/popup/__close-icon/popup__close-icon.css
@@ -5,7 +5,7 @@
   top: -42px;
   left: 438px;
   background: rgba(0, 0, 0, 0);
-  background-image: url(../../../images/__close-icon.svg);
+  background-image: url(../../../images/close-icon.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
