--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,7 +3,7 @@
   height: 24px;
   background: rgba(0, 0 , 0, 0);
   border: 1px solid #FFFFFF;
-  background-image: url(../../../images/__edit-button.svg);
+  background-image: url(../../../images/edit-button.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 10px;
