feat: add routes

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 @import url(./blocks/section/section.css);
 @import url(./blocks/logo/logo.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/nav/nav.css);
 @import url(./blocks/content/content.css);
 @import url(./blocks/content/__section/content__section.css);
 @import url(./blocks/content/__profile/content__profile.css);
