--- a/src/blocks/form/__submit-button/form__submit-button.css
+++ b/src/blocks/form/__submit-button/form__submit-button.css
@@ -13,6 +13,20 @@
   cursor: pointer;
 }
 
+.form__submit-button_theme_white {
+  background: #FFF;
+  color: #000000;
+  width: 358px;
+  height: 50px;
+  border-radius: 2px;
+  border: none;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+}
+
+
 .form__submit-button:hover {
   opacity: 0.8;
   transition: opacity .5s linear;
