--- a/src/blocks/form/form.css
+++ b/src/blocks/form/form.css
@@ -4,3 +4,11 @@
   flex-direction: column;
 }
 
+.form_theme_white {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid grey;
+}
