--- a/src/index.css
+++ b/src/index.css
@@ -44,11 +44,13 @@
 @import url(./blocks/form/__item/_input/form__item_input_avatar.css);
 @import url(./blocks/form/__item/_input/form__item_input_name.css);
 @import url(./blocks/form/__item/_input/form__item_input_place.css);
+@import url(./blocks/form/__item/_input/form__item_input_email.css);
 @import url(./blocks/container/container.css);
 @import url(./blocks/form/__submit-button/form__submit-button.css);
 @import url(./blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(./blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(./blocks/popup/__error/popup__error.css);
 @import url(./blocks/popup/__error/_visible/popup__error_visible.css);
+@import url(./blocks/help-text/help-text.css);
 
 
