--- a/src/blocks/heading/heading.css
+++ b/src/blocks/heading/heading.css
@@ -6,6 +6,15 @@
   margin-top: 0;
 }
 
+.heading__register {
+  margin-top: 60px;
+  margin-bottom: 20px;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+
 @media (max-width: 1280px) {
   .heading {
     font-size: calc(18px + ((100vw - 320px) / (1280 - 320)) * (24 - 18));
