--- a/src/index.css
+++ b/src/index.css
@@ -52,5 +52,6 @@
 @import url(./blocks/popup/__error/popup__error.css);
 @import url(./blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(./blocks/help-text/help-text.css);
+@import url(./blocks/form/__item/_input/form__item_input_sign.css);
 
 
