--- a/src/blocks/form/__submit-button/form__submit-button.css
+++ b/src/blocks/form/__submit-button/form__submit-button.css
@@ -38,7 +38,7 @@
   transition: opacity .5s linear;
 }
 
-@media (max-width: 1280px) {
+@media screen and (max-width: 1280px) {
   .form__submit-button {
     height: calc(46px + ((100vw - 320px) / (1280 - 320)) * (50.15 - 46));
     width: calc(238px + ((100vw - 320px) / (1280 - 320)) * (358 - 238));
@@ -50,5 +50,6 @@
     width: calc(238px + ((100vw - 320px) / (1280 - 320)) * (358 - 238));
     font-size: calc(14px + ((100vw - 320px) / (1280 - 320)) * (18 - 14));
     line-height: calc(17px + ((100vw - 320px) / (1280 - 320)) * (22 - 17));
+    margin-top:  calc(173px + ((100vw - 320px) / (1280 - 320)) * (216 - 173));
   }
 }
