feat: create protected route

--- a/src/blocks/form/__item/_input/form__item_input_email.css
+++ b/src/blocks/form/__item/_input/form__item_input_email.css
@@ -1,4 +1,6 @@
 .form__item_input_email {
-  padding-bottom: 2px solid red;
-  background-color: none;
+  background-color: black;
+  color: #fff;
+  border-bottom: 2px solid #CCCCCC
 }
+
