feat: add components

--- a/src/index.css
+++ b/src/index.css
@@ -53,5 +53,6 @@
 @import url(./blocks/popup/__error/popup__error.css);
 @import url(./blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(./blocks/help-text/help-text.css);
+@import url(./blocks/info/info.css);
 
 
