feat: add styles

--- a/src/blocks/nav/nav.css
+++ b/src/blocks/nav/nav.css
@@ -1,14 +1,29 @@
 .nav {
-  text-decoration: none;
+  display: flex;
+  align-items: flex-start;
   font-weight: 400;
   color: #FFF;
   font-size: 18px;
   line-height: 22px;
   margin-top: 51px;
   margin-right: 0;
+  gap: 24px;
 }
 
-.nav:hover {
+.nav__email {
+  margin: 0;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: #FFF;
+}
+
+.nav__link_logged-in {
+  color: #A9A9A9;
+}
+
+.nav__link_logged-in:hover {
   opacity: 0.6;
   transition: opacity .5s linear;
 }
