feat: add hamburger menu

--- a/src/blocks/page/__header/page__header.css
+++ b/src/blocks/page/__header/page__header.css
@@ -1,6 +1,6 @@
 .page__header {
-  /* Задавать высоту элементам допустимо в том случае, если нет других способов решить эту проблему (например, для фоновой подложки определенной высоты). Здесь в этом нет необходимости, высота элемента задается отступами и контентом внутри него */
-  /* min-height: 84px; */
-  /* max-height: 119px; */
+  display: flex;
+  flex-direction: column;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
+
