--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,5 +2,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: relative;
 }
 
+.header_type_slider {
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
+  margin-top: 40px;
+}
