--- a/src/blocks/nav/nav.css
+++ b/src/blocks/nav/nav.css
@@ -8,6 +8,7 @@
   margin-top: 51px;
   margin-right: 0;
   gap: 24px;
+  visibility: visible;
 }
 
 .nav__email {
@@ -21,6 +22,7 @@
 
 .nav__link_logged-in {
   color: #A9A9A9;
+  visibility: visible;
 }
 
 .nav__link_logged-in:hover {
@@ -28,15 +30,84 @@
   transition: opacity .5s linear;
 }
 
-@media screen and (max-widt: 450px) {
+.nav_type_slider {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  align-items: center;
+  margin: 0;
+}
+
+.nav_type_slider:last-child {
+  margin-bottom: 40px;
+}
+
+.icon-one {
+  position: absolute;
+  top: 42px;
+  left: 266px;
+  cursor: pointer;
+}
+
+.icon-one:hover {
+  opacity: .6;
+}
+
+.hamburger {
+  top:5%;
+  left: 10%;
+  width: 24px;
+  height: 3px;
+  background: #FFF;
+  position: absolute;
+  transition: 0.5s;
+}
+
+.hamburger:before {
+  top: -7.5px;
+}
+
+.hamburger:after {
+  top: 7.5px;
+}
+
+.hamburger-one:before,
+.hamburger-one:after {
+  content: '';
+  position:absolute;
+  width: 24px;
+  height: 3px;
+  background:#FFF;
+  transition:0.5s;
+}
+
+.icon-one.active-one .hamburger-one {
+  background:rgba(0,0,0,0);
+}
+
+.icon-one.active-one .hamburger-one:before {
+  top: 0;
+  transform:rotate(45deg);
+}
+
+.icon-one.active-one .hamburger-one:after {
+  top: 0;
+  transform:rotate(135deg);
+}
+
+@media screen and (max-width: 450px) {
   .nav {
     font-size: 14px;
     line-height: 17px;
     margin-top: 34px;
     margin-right: 30px;
   }
+  .icon-one {
+    left: calc(266px + ((100vw - 320px) / (450 - 320)) * (396 - 266));
+  }
 }
-@media screen and (max-width: 1280px) {
+
+@media (min-width: 450px) and (max-width: 1280px) {
   .nav {
     margin-top: calc(34px + ((100vw - 450px) / (1280 - 450)) * (51 - 34));
     font-size: 14px;
@@ -44,5 +115,3 @@
     margin-right: calc(30px + ((100vw - 450px) / (1280 - 450)) * (0 - 30));
   }
 }
-
-
