--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@
 @import url(./blocks/form/__submit-button/form__submit-button.css);
 @import url(./blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(./blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(./blocks/popup/_with-image/popup_with_image.css);
 @import url(./blocks/popup/__error/popup__error.css);
 @import url(./blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(./blocks/help-text/help-text.css);
